[project]
name = "sr-linear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.2",
    "h5py>=3.16.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "toml>=0.10.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
